--- a/Group Project/main.html
+++ b/Group Project/main.html
@@ -81,10 +81,10 @@
 
     <div class = 'contactInfo'>
         <label for="pNumber">Phone number:</label>
-        <input type="number" id = 'pNumber'>
+        <input type="text" id = 'pNumber'>
     </div>
     <div class = 'contactInfo'>
-        <label for="description" id = "description">Description:</label>
+        <label for="description" id = "descriptionForEmail">Description:</label>
         <input type="text" id = 'description'>
     </div>
 
@@ -107,5 +107,6 @@
 </div>
 
 <script src="main.js"></script>
+<script src="https://smtpjs.com/v3/smtp.js"></script>
 </body>
 </html>
